Sat Apr  2 17:41:15 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in server/Makefile.am server/gam_channel.c
	  server/gam_kqueue.c server/gam_kqueue.h server/gam_server.c:
	  applied patch from Joe Marcus Clarke, adding a kqueue based
	  kernel backend for the BSD abd MacOS X platforms.

Wed Mar 30 12:55:38 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* gamin.pc.in: removing the Requires: glib-2.0 gthread-2.0 per
	  Red Hat bug #152486

Tue Mar 29 08:16:55 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* tests/Makefile.am: cleanup result files left from make tests

Fri Mar 25 11:04:16 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in libgamin/gam_api.c server/gam_channel.c: bug fixes
	  and portability patches from Joe Marcus Clarke when porting to
	  FreeBSD.

Wed Mar 23 16:16:38 CET 2005 Daniel Veillard <veillard@redhat.com>

	* python/tests/Makefile.am python/tests/flood4.py: one more flooding
	  handling regression test.

Wed Mar 23 11:59:20 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: make 100% sure we will not use kernel monitoring
	  for excluded resources, c.f. bug #151774
	* python/tests/Makefile.am python/tests/flood3.py: added a third flood
	  regression test

Wed Mar 23 10:45:20 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_poll.c: more work on the flow
	  control especially when multiple monitors use the same dnotify
	  watcher
	* python/tests/Makefile.am python/tests/flood2.py: added a
	  second regression test for it.

Tue Mar 22 17:21:01 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_debugging.c server/gam_debugging.h server/gam_dnotify.c
	  server/gam_poll.c: implemented the DNotify side of the flow
	  control processing, and the associated debug.
	* python/tests/Makefile.am python/tests/flood.py: added a 
	  first regression test for it.

Tue Mar 22 15:22:05 CET 2005 Daniel Veillard <veillard@redhat.com>
